ver 0.02 Aplique bootstrap a galeria

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="contenedor">
         <header class="header">
-            <a class="logo" href="index.html"><img src="img/logo-meraki.jpg" alt="Logo meraki" width="100px" height="100px">
+            <a class="navbar-brand" href="index.html">
+                <img src="../Desafio-4/img/logo-meraki.jpg" alt="Logo meraki" width="80" height="80"></a>
             <nav>
                 <ul>
-                    <div><li><a class ="button" href="">Inicio</a></li></div>
                     <div><li><a class ="button" href="pages/galeria.html">Galeria</a></li></div>
                     <div><li><a class ="button" href="pages/contacto.html">Contacto</a></li></div>
                     <div><li><a class ="button" href="pages/preguntas-frecuentes.html">Preguntas Frecuentes</a></li></div>
