--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,12 +11,12 @@
 <body>
     <div class="contenedor">
         <header class="header">
-            <a class="logo" href="../index.html"><img src="../img/logo-meraki.jpg" alt="Logo meraki" width="100px" height="100px">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo-meraki.jpg" alt="Logo meraki" width="80" height="80"></a>
             <nav>
                 <ul>
                     <div><li><a class ="button" href="../index.html">Inicio</a></li></div>
                     <div><li><a class ="button" href="galeria.html">Galeria</a></li></div>
-                    <div><li><a class ="button" href="contacto.html">Contacto</a></li></div>
                     <div><li><a class ="button" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li></div>
                     <div><li><a class ="button" href="sobre-nosotras.html">Sobre Nosotras</a></li></div>
                 </ul>
