--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="../index.html"><img src="../img/logo-meraki.jpg" alt="Logo meraki" width="100px"> <h5>Meraki Apla</h5></a>
+        <a class="navbar-brand" href="../index.html">
+            <img src="../img/logo-meraki.jpg" alt="Logo meraki" width="80" height="80"></a>
         <nav>
             <ul>
                 <li><a class ="enlaces_nav" href="../index.html">Inicio</a> </li> 
                 <li><a class ="enlaces_nav" href="galeria.html">Galeria</a></li>
                 <li><a class ="enlaces_nav" href="contacto.html">Contacto</a></li>
-                <li><a class ="enlaces_nav" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
                 <li><a class ="enlaces_nav" href="sobre-nosotras.html">Sobre Nosotras</a></li>
             </ul>
         </nav>
