--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -6,48 +6,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1</title>
     <link rel="stylesheet" href="../estilo.css">
-    <link rel="shortcut icon" href="../favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital@1&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Prompt:ital@1&display=swap" rel="stylesheet"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <a class="logo" href="../index.html"><img src="../img/logo-meraki.jpg" alt="Logo meraki" width="100px"> <h5>Meraki Apla</h5></a>
-            <nav>
-                <ul>
-                    <li><a class ="enlaces_nav" href="../index.html">Inicio</a> </li> 
-                    <li><a class ="enlaces_nav" href="galeria.html">Galeria</a></li>
-                    <li><a class ="enlaces_nav" href="contacto.html">Contacto</a></li>
-                    <li><a class ="enlaces_nav" href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
-                    <li><a class ="enlaces_nav" href="sobre-nosotras.html">Sobre Nosotras</a></li>
-                </ul>
-            </nav>
-        </header>
+    <div class="container-fluid">
+        <div class="container-fluid">
+            <header class="header">
+                <a href="../index.html">
+                    <img src="../img/logo-meraki.jpg" alt="Logo meraki" width="80" height="80"></a>
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="sobre-nosotras.html">Sobre Nosotras</a>
+                        </li>
+                    </ul>
+            </header>
+        </div>
         <main>
             <h1>Nuestros productos</h1>
-            <h2>Camas</h2>
-                <div class="imagenes">
-                    <div><img src="../img/cama-merakimarron.jpg" alt="Cama marron mediana" ></div>
-                    <div><img src="../img/cama-merakimarron.jpg" alt="Cama marron mediana" ></div>
-                    <div><img src="../img/cama-merakimarron.jpg" alt="Cama marron mediana" ></div>
-                    <div><img src="../img/cama-merakimarron.jpg" alt="Cama marron mediana" ></div>
-                    <div><img src="../img/cama-meraki.jpg" alt="Cama meraki" ></div>
-                    <div><img src="../img/cama-meraki.jpg" alt="Cama meraki" ></div>
-                    <div><img src="../img/cama-meraki.jpg" alt="Cama meraki" ></div>
-                    <div><img src="../img/cama-meraki.jpg" alt="Cama meraki" ></div>
-                    <div><img src="../img/cama-merakigris.jpg" alt="Cama meraki gris" ></div>
-                    <div><img src="../img/cama-merakigris.jpg" alt="Cama meraki gris" ></div>
-                    <div><img src="../img/cama-merakigris.jpg" alt="Cama meraki gris" ></div>
-                    <div><img src="../img/cama-merakigris.jpg" alt="Cama meraki gris" ></div>
+            <div class="container">
+                
+                <h2>Camas</h2>
+                <div class="row row-cols-2 row-cols-sm-3 row-cols-md-3">
+                    <div class="col mt-3">
+                    <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nulla!</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, quas!</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, pariatur.</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, facilis?</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni, dolores?</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, rem.</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, illum?</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos, amet.</p>
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, suscipit?</p>
+                    </div>
                 </div>
+            </div>
             <br><br>
-            <div class="grid_container_pecheras">
-                    <section> <h2>Pecheras</h2>
-                        <img src="../img/pechera-mickey.jpg" alt="Pechera mickey"  >
-                        <img src="../img/pechera-patita.jpg" alt="Pechera patitas" >
-                        <img src="../img/pechera-sandia.jpg" alt="Pechera sandia"  >
-                    </section>
+            <div class="container">
+                <h2>Pecheras</h2>
+                <div class="row row-cols-2 row-cols-sm-3 row-cols-md-3">
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                    <div class="col mt-3">
+                        <h3>Pechera sandia</h3>
+                        <img src="../img/pechera-sandia.jpg" class="img-fluid" alt="image">
+                    </div>
+                </div>
             </div>
         </main>
         <footer>
