--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -13,20 +13,20 @@
     <div class="container-fluid">
         <div class="container-fluid">
             <header class="header">
-                <a href="../index.html">
+                <a class="navbar navbar-expand-lg" href="../index.html">
                     <img src="../img/logo-meraki.jpg" alt="Logo meraki" width="80" height="80"></a>
                     <ul class="nav justify-content-end">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            <a class ="button" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Contacto</a>
+                            <a class ="button" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                            <a class ="button" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre-nosotras.html">Sobre Nosotras</a>
+                            <a class ="button" href="sobre-nosotras.html">Sobre Nosotras</a>
                         </li>
                     </ul>
             </header>
@@ -128,10 +128,10 @@
             </div>
         </main>
         <footer>
-            <h4>Derechos reservados a Meraki Apla</h4>
-                <a href=""><img src="../img/whatsapp.png" alt="Logo Whatsapp" width="30px"></a>
-                <a href=""><img src="../img/facebook.png" alt="Logo facebook" width="30px"></a>
-                <a href=""><img src="../img/instagram.png" alt="Logo instagram" width="30px"></a>
+            <h4 class="footer justify-content-end">Derechos reservados a Meraki Apla</h4>
+                <a href=""><img src="../img/whatsapp.png" alt="Logo Whatsapp" width="40px"></a>
+                <a href=""><img src="../img/facebook.png" alt="Logo facebook" width="40px"></a>
+                <a href=""><img src="../img/instagram.png" alt="Logo instagram" width="40px"></a>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
