ver 0.4 Agregue bootstrap a sobre nosotras

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -127,8 +127,10 @@
                 </div>
             </div>
         </main>
-        <footer>
-            <h4 class="footer justify-content-end">Derechos reservados a Meraki Apla</h4>
+        <footer class="footer justify-content-end">
+            <div class="footer justify-content-center">
+            <h5>Derechos reservados a Meraki Apla</h5>
+            </div>
                 <a href=""><img src="../img/whatsapp.png" alt="Logo Whatsapp" width="40px"></a>
                 <a href=""><img src="../img/facebook.png" alt="Logo facebook" width="40px"></a>
                 <a href=""><img src="../img/instagram.png" alt="Logo instagram" width="40px"></a>
