Ver 0.4.1 subiendo a github tuve problemas con git y las ramas al subirlo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <main class="contenido">
-            <h1>Indumentaria y accesorios para tu mascota</h1>
+            <h1>Indumentaria y Accesorios para tu mascota</h1>
             <div class="promos">
             <p>Conocé nuestras promos</p>
             </div>
